--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Honour Board</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://unpkg.com/tabletop@1.6.0/tabletop.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 </head>
 <body>
 
