--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   </div>
 
   <div id="honourBoardContainer" style="display: none;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/AFL_logo.png/800px-AFL_logo.png" class="logo" alt="Club Logo" />
-    <div id="tableContainer"></div>
+    <div id="tableWrapper">
+      <div id="tableContainer"></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
